--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "swiper": "^5.3.1",
     "vue": "^2.5.2",
     "vue-router": "^3.1.5"
   },
