--- a/package.json
+++ b/package.json
@@ -13,10 +13,13 @@
   "dependencies": {
     "axios": "^0.19.2",
     "better-scroll": "^1.15.2",
+    "date-fns": "^2.10.0",
     "mint-ui": "^2.2.13",
     "mockjs": "^1.1.0",
+    "moment": "^2.24.0",
     "swiper": "^5.3.1",
     "vue": "^2.5.2",
+    "vue-lazyload": "^1.3.3",
     "vue-router": "^3.1.5",
     "vuex": "^3.1.2"
   },
